8294699: Launcher causes lingering busy cursor